manifests/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
  name: keycloak
  namespace: keycloak
spec:
  rules:
    - host: keycloak.minikube.local
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - keycloak.minikube.local
      secretName: keycloak-minikube-local-tls
